--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -1769,7 +1769,7 @@ document.addEventListener('DOMContentLoaded', () => {
             console.log('Populating write modal from saved crawlTexts:', crawlTexts);
             crawlTexts.forEach(text => {
                 if (textBlockCount < MAX_BLOCKS) {
-                    addTextBlock(false, text); // isInitialBlock is false, pass the text
+                    addTextBlock(false, text.text, text.align); // isInitialBlock is false, pass the text and alignment
                 }
             });
         }
@@ -1780,7 +1780,7 @@ document.addEventListener('DOMContentLoaded', () => {
         updateSaveButtonState(); // Update save button based on populated texts
     }
 
-    function createTextBlockElement(initialText = '') {
+    function createTextBlockElement(initialText = '', initialAlign = 'justify') {
         textBlockCount++;
         const blockId = `text-block-${textBlockCount}`;
         const textAreaId = `textarea-${textBlockCount}`;
@@ -1829,16 +1829,49 @@ document.addEventListener('DOMContentLoaded', () => {
 
         blockDiv.appendChild(textarea);
         blockDiv.appendChild(charCounter);
+
+        const alignmentLabel = document.createElement('label');
+        alignmentLabel.textContent = 'Alignment: ';
+        alignmentLabel.style.color = '#ccc';
+        alignmentLabel.style.marginRight = '5px';
+    alignmentLabel.style.fontSize = '12px'; // Set font size to 12px
+        alignmentLabel.style.display = 'inline-block'; // Keep it on the same line as select
+        alignmentLabel.style.verticalAlign = 'middle';
+
+        const alignmentSelect = document.createElement('select');
+        alignmentSelect.className = 'alignment-select'; // Added class for easier selection
+        alignmentSelect.style.padding = '5px';
+        alignmentSelect.style.backgroundColor = '#222';
+        alignmentSelect.style.color = '#ddd';
+        alignmentSelect.style.border = '1px solid #444';
+        alignmentSelect.style.borderRadius = '3px';
+        alignmentSelect.style.marginBottom = '10px';
+        alignmentSelect.style.verticalAlign = 'middle';
+
+        const justifyOption = document.createElement('option');
+        justifyOption.value = 'justify';
+        justifyOption.textContent = 'Justify';
+        alignmentSelect.appendChild(justifyOption);
+
+        const centerOption = document.createElement('option');
+        centerOption.value = 'center';
+        centerOption.textContent = 'Center';
+        alignmentSelect.appendChild(centerOption);
+
+        alignmentSelect.value = initialAlign; // Set initial value
+
+        blockDiv.appendChild(alignmentLabel);
+        blockDiv.appendChild(alignmentSelect);
         return blockDiv;
     }
 
-    function addTextBlock(isInitialBlock, text = '') {
+    function addTextBlock(isInitialBlock, text = '', align = 'justify') {
         if (textBlockCount >= MAX_BLOCKS) {
             newTextBlockButton.style.display = 'none'; // Hide button if max blocks reached
             return;
         }
         
-        const newBlockElement = createTextBlockElement(text);
+        const newBlockElement = createTextBlockElement(text, align);
         textBlocksContainer.appendChild(newBlockElement);
 
         if (textBlockCount >= MAX_BLOCKS) {
@@ -1900,15 +1933,24 @@ document.addEventListener('DOMContentLoaded', () => {
 
     function processAndStoreCrawlTexts() {
         crawlTexts = []; // Clear previous texts
-        const textareas = textBlocksContainer.getElementsByTagName('textarea');
+        const blockElements = textBlocksContainer.querySelectorAll(':scope > div[id^="text-block-"]');
         let validTextsFound = false;
-        for (let i = 0; i < textareas.length; i++) {
-            const text = textareas[i].value.trim();
-            if (text.length > 0 && text.length <= MAX_CHARS_PER_BLOCK) {
-                crawlTexts.push(text);
-                validTextsFound = true;
+
+        blockElements.forEach(blockDiv => {
+            const textarea = blockDiv.querySelector('textarea');
+            const alignmentSelect = blockDiv.querySelector('.alignment-select');
+            if (textarea && alignmentSelect) {
+                const text = textarea.value.trim();
+                const align = alignmentSelect.value;
+                if (text.length > 0 && text.length <= MAX_CHARS_PER_BLOCK) {
+                    crawlTexts.push({ text: text, align: align });
+                    validTextsFound = true;
+                }
+            } else {
+                console.warn('Textarea or alignment select not found in block:', blockDiv);
             }
-        }
+        });
+
         return validTextsFound;
     }
 
@@ -2098,9 +2140,10 @@ document.addEventListener('DOMContentLoaded', () => {
             return;
         }
 
-        const currentText = activeCrawlTexts[currentCrawlBlockIndex];
-        console.log(`Playing crawl block ${currentCrawlBlockIndex + 1}: "${currentText.substring(0,30)}..."`);
-        crawlContent.innerHTML = currentText.replace(/\n/g, '<br>');
+        const currentBlock = activeCrawlTexts[currentCrawlBlockIndex];
+        console.log(`Playing crawl block ${currentCrawlBlockIndex + 1}: "${currentBlock.text.substring(0,30)}..." with alignment: ${currentBlock.align}`);
+        crawlContent.innerHTML = currentBlock.text.replace(/\n/g, '<br>');
+        crawlContent.style.textAlign = currentBlock.align; // Apply alignment
         crawlContainer.style.display = 'block';
 
         // Reset and restart animation
