fixed the ghost text bug of text appearing from previous generation Summary of Changes:
Modified the handleSaveButtonClick function in /Users/robertstanley/projects/html-fun/zen-space-entropy.html.
Before the HTML content is packaged for saving, the section for the Star Wars crawl (#star-wars-crawl-container and #star-wars-crawl-content) is now programmatically reset to its default placeholder state within the HTML string being saved. This involves clearing any dynamically added text and inline styles from these elements.

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -2248,6 +2248,24 @@ document.addEventListener('DOMContentLoaded', () => {
             });
             // --- End Reset Game State and UI ---
 
+        // --- Reset Star Wars Crawl Display for Saved File ---
+            // Reset crawl content to placeholder
+            currentHtml = currentHtml.replace(
+                /(<div id="star-wars-crawl-content"[^>]*>)[\s\S]*?(<\/div>)/m,
+                '$1<!-- Placeholder text will be injected by JavaScript -->$2'
+            );
+            // Remove inline style from crawl content div
+            currentHtml = currentHtml.replace(
+                /(<div id="star-wars-crawl-content")\s+style="[^"]*"/m,
+                '$1'
+            );
+            // Remove inline style from crawl container div
+            currentHtml = currentHtml.replace(
+                /(<div id="star-wars-crawl-container")\s+style="[^"]*"/m,
+                '$1'
+            );
+        // --- End Reset Star Wars Crawl Display ---
+
             const crawlTextsJSON = JSON.stringify(crawlTexts);
             const crawlEmbedRegex = /(let\s+crawlTexts\s*=\s*)(?:[^;]+)(\s*;\s*\/\/.*)/m;
             const newCrawlTextsInitialization = `$1${crawlTextsJSON}$2`;
