changes star wars text font to monospace family

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -83,7 +83,7 @@
             width: 130%; /* Pushing content width further */
             text-align: justify; /* Classic crawl text alignment */
             color: #ffc070; /* Requested text color */
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; /* Common, readable sans-serif */
+            font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
             font-size: clamp(30px, 6vw, 60px); /* bigger responsive font size */
             font-weight: bold;
             line-height: 1.6; /* Spacing between lines */
