--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -579,7 +579,8 @@
             <p style="font-size: 12px; line-height: 1.8;">Engage in satisfyingly mindless destruction of enemy spaceships. Achieve a Zen-like flow state by mowing down a constant onslaught of dangerous aliens. </p>
             <p style="font-size: 12px; line-height: 1.8;">You are the last defense against the hordes of the Galactic Overlords.  If you fail, entropy will rise to maximum - resulting in the heat death of the universe T_T</p>
             <p style="font-size: 12px; line-height: 1.8;">Shoot down the enemy spaceships. Keep an eye on your laser cannon ammo count at the top right, you get 2 more shots with every enemy spaceship that spawns. </p>
-            <p style="font-size: 12px; line-height: 1.8;">The goal is to use this game as mind training therapy, and to be an extreme badass space hero. The continued existence of the universe is all down to your skill. </p>
+            <p style="font-size: 12px; line-height: 1.8;">Use this game as mind training therapy. <a href="#" onclick="window.location.reload(); return false;" style="color: #4CAF50;">Edit the animated text</a> and send your beautiful words out into the universe, or write a letter to your friend.</p>
+            <p style="font-size: 12px; line-height: 1.8;">The continued existence of the universe is all down to your skill. </p>
             <p style="font-size: 12px; line-height: 1.8; margin-bottom: 20px;">Good luck!</p>
             <button id="close-modal" style="padding: 5px 15px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; margin-top: 20px; font-family: 'Press Start 2P', cursive; font-size: 12px; position: relative; z-index: 1001;">Close</button>
         </div>
