--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -590,7 +590,7 @@
     <div id="write-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.95); z-index: 2001; justify-content: center; align-items: center; flex-direction: column; overflow-y: auto; padding: 20px; box-sizing: border-box;">
         <div class="write-modal-content-box">
             <h2 class="write-modal-title">WRITE</h2>
-            <p class="write-modal-subtitle">Be creative, save a copy, and send the file to others. </p>
+            <p class="write-modal-subtitle">Be creative, save it, and send it on. </p>
             <p class="write-modal-info">Edit the animated text. 500 characters max per text block. Up to 10 blocks.</p>
             
             <div id="text-blocks-container" style="margin-bottom: 20px; max-height: 40vh; overflow-y: auto; padding-right: 10px; /* For scrollbar */">
