adds 3 zen tao text blocks as default/plaeholder text

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -1921,7 +1921,7 @@ document.addEventListener('DOMContentLoaded', () => {
     let textBlockCount = 0;
     const MAX_BLOCKS = 10;
     const MAX_CHARS_PER_BLOCK = 500;
-    let crawlTexts = []; // To store saved texts
+    let crawlTexts = [{"text":"Great gladiators are not violent,\nGreat warriors are not enraged,\nGreat champions remain uncontested,\nGreat leaders act with humility.\nThat is the Virtue of not contesting,\nThat is the power of leadership,\nThat is the ultimate unity with timelessness.","align":"center"},{"text":"Of all gentleness and submissiveness in the world\nNothing compares to water,\nAnd to tackle stiffness and toughness there is nothing better,\nThere is no easier substitution.\nBe submissive to overcome dominance,\nBe gentle to overcome toughness,\nNone in the world knows not,\nNone can follow.","align":"center"},{"text":"Practicing scholarships, every day there is something to gain,\nPracticing the Dao, every day there is something to lose;\nWhen you lose all that can be lost,\nYou may be without action.\nAct not and leave none to be acted upon!\nTherefore those who can master the universe,\nOften remain unoccupied;\nThose who are preoccupied,\nCannot master the universe.","align":"center"}]; // To store saved texts
     const fixedAnimationDurationSeconds = 45.0; // Duration for each crawl block
     let currentCrawlBlockIndex = 0;
     let activeCrawlTexts = [];
