changes game over to quantum extintion

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -1868,7 +1868,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <!-- leaderboard ui -->
     <div id="leaderboardScreen" style="display: none; /* Other styles applied by CSS */">
         <div id="leaderboard-content-wrapper"> <!-- ADD THIS OPENING TAG -->
-            <h2>GAME OVER</h2>
+            <h2>QUANTUM EXTINCTION</h2>
             
             <div class="score-display">
                 Score: <span id="base-score-display">0</span> + bonus (8 × <span id="bonus-bullets-display">0</span>) = <span id="final-score-display">0</span>
