margin added below high score tab buttons

--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -276,6 +276,7 @@
             flex: 1;
             padding: 8px;
             background: #222;
+            margin-bottom: 10px;
             border: 1px solid #00ff00;
             color: white;
             cursor: pointer;
@@ -577,8 +578,7 @@
             <h2 style="margin-top: 0; font-size: 18px; margin-bottom: 15px; line-height: 1.4;">Zen Space Entropy</h2>
             <img src="images/space-tank-battle-2-800.png" alt="Zen Space Entropy Preview" style="max-width: 100%; height: auto; border-radius: 5px; margin-bottom: 15px; border: 2px solid #4CAF50; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5);">
             <p style="font-size: 12px; line-height: 1.8;">Engage in satisfyingly mindless destruction of enemy spaceships. Achieve a Zen-like flow state by mowing down a constant onslaught of dangerous aliens. </p>
-            <p style="font-size: 12px; line-height: 1.8;">You are the last defense against the hordes of the Galactic Overlords.  If you fail, entropy will rise to maximum - resulting in the heat death of the universe T_T</p>
-            <p style="font-size: 12px; line-height: 1.8;">Shoot down the enemy spaceships. Keep an eye on your laser cannon ammo count at the top right, you get 2 more shots with every enemy spaceship that spawns. </p>
+            <p style="font-size: 12px; line-height: 1.8;">Shoot down the enemy spaceships. Keep an eye on your laser cannon ammo count at the top right, you get 2 more shots with every enemy spaceship that spawns. Conserve your ammo for a higher bonus score.</p>
             <p style="font-size: 12px; line-height: 1.8;">Use this game as mind training therapy. <a href="#" onclick="window.location.reload(); return false;" style="color: #4CAF50;">Edit the animated text</a> and send your beautiful words out into the universe, or write a letter to your friend.</p>
             <p style="font-size: 12px; line-height: 1.8;">The continued existence of the universe is all down to your skill. </p>
             <p style="font-size: 12px; line-height: 1.8; margin-bottom: 20px;">Good luck!</p>
