--- a/zen-space-entropy.html
+++ b/zen-space-entropy.html
@@ -43,7 +43,7 @@
             overflow: hidden;
             background: #000;
             touch-action: none;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
         }
         #game-container {
             position: absolute;
@@ -171,7 +171,7 @@
             justify-content: flex-start; /* Keeps content starting from top */
             align-items: flex-start; /* MODIFIED: Align wrapper to the start (top) */
             color: white;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             padding: 5vh 0; /* MODIFIED: Top/bottom padding for the screen, wrapper handles side margins */
             box-sizing: border-box;
             overflow-y: auto; /* This allows the screen itself to scroll if wrapper is too tall */
@@ -201,7 +201,7 @@
             border: 1px solid rgba(255, 55, 55, 0.76); /* Your red border */
             border-radius: 5px;
             cursor: pointer;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             z-index: auto; /* Reset */
             display: block; /* To allow margin auto */
             width: fit-content;
@@ -235,7 +235,7 @@
             background: #333; /* Added for visibility */
             color: #0f0;    /* Added for visibility */
             border: 1px solid #0f0; /* Added for visibility */
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
         }
         #leaderboardScreen #high-score-form button {
             font-size: 0.9em; /* Reduced */
@@ -243,7 +243,7 @@
             background: #00aa00; /* Added for visibility */
             color: white; /* Added for visibility */
             border: 1px solid #0f0; /* Added for visibility */
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             cursor: pointer;
         }
         #leaderboardScreen #leaderboard-container {
@@ -269,7 +269,7 @@
             background: #00aa00; /* Added for visibility */
             color: white; /* Added for visibility */
             border: 1px solid #0f0; /* Added for visibility */
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             cursor: pointer;
         }
         #leaderboardScreen .leaderboard-tabs button { /* Style for tab buttons */
@@ -281,7 +281,7 @@
             color: white;
             cursor: pointer;
             font-size: 0.8em; /* Reduced */
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
         }
         #leaderboardScreen .leaderboard-tabs button.active {
             background: #00aa00 !important;
@@ -292,7 +292,7 @@
             left: 50%;
             transform: translateX(-50%);
             color: white;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             font-size: 12px;
             z-index: 100;
             display: flex;
@@ -309,7 +309,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
         }
         @media (min-width: 1024px) {
             .control-btn {
@@ -376,7 +376,7 @@
         }
 
         .write-modal-title {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             font-size: 24px;
             margin-top: 0;
             margin-bottom: 10px;
@@ -384,7 +384,7 @@
         }
 
         .write-modal-subtitle {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             font-size: 12px;
             margin-bottom: 15px;
             color: #ccc;
@@ -422,7 +422,7 @@
         }
 
         .block-label {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             color: #ccc;
             font-size: 12px;
             margin-bottom: 8px; /* Increased slightly for better separation */
@@ -490,7 +490,7 @@
         }
 
         .retrofuturistic-button {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P', monospace;
             border-radius: 3px; /* Sharper corners */
             padding: 8px 15px;
             font-size: 11px; /* Consistent small button size */
@@ -566,9 +566,9 @@
     <div id="start-screen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgb(0, 0, 0); display: flex; justify-content: center; align-items: center; flex-direction: column; color: white; font-size: 24px; overflow-y: auto; padding: 20px; box-sizing: border-box; text-align: center; z-index: 1000;">
         <h1 style="margin: 0 0 30px 0; font-size: 28px; text-shadow: 0 0 10px #4CAF50; text-align: center; line-height: 1.4;">ZEN SPACE ENTROPY</h1>
         <img src="images/space-tank-battle-800.png" alt="Zen Space Entropy Preview" style="max-width: 80%; max-height: 40vh; height: auto; border-radius: 5px; margin: 0 0 30px; border: 2px solid #4CAF50; box-shadow: 0 0 15px rgba(76, 175, 80, 0.5);">
-        <button id="start-btn" style="margin-bottom: 20px; padding: 10px 30px; font-size: 16px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); font-family: 'Press Start 2P', cursive;">Start Game</button>
-        <button id="info-btn-start" style="padding: 5px 15px; font-size: 12px; background: rgba(255,255,255,0.2); color: white; border: none; border-radius: 5px; cursor: pointer; font-family: 'Press Start 2P', cursive;">info</button>
-        <button id="open-write-modal-button" style="margin-top: 20px; padding: 10px 30px; font-size: 16px; background: #FFD700; color: black; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(255, 215, 0, 0.5); font-family: 'Press Start 2P', cursive;">Write</button>
+        <button id="start-btn" style="margin-bottom: 20px; padding: 10px 30px; font-size: 16px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(76, 175, 80, 0.5); font-family: 'Press Start 2P', monospace;">Start Game</button>
+        <button id="info-btn-start" style="padding: 5px 15px; font-size: 12px; background: rgba(255,255,255,0.2); color: white; border: none; border-radius: 5px; cursor: pointer; font-family: 'Press Start 2P', monospace;">info</button>
+        <button id="open-write-modal-button" style="margin-top: 20px; padding: 10px 30px; font-size: 16px; background: #FFD700; color: black; border: none; border-radius: 5px; cursor: pointer; box-shadow: 0 0 10px rgba(255, 215, 0, 0.5); font-family: 'Press Start 2P', monospace;">Write</button>
     </div>
     
     <!-- Old game-over div removed -->
@@ -582,7 +582,7 @@
             <p style="font-size: 12px; line-height: 1.8;">Use this game as mind training therapy. <a href="#" onclick="window.location.reload(); return false;" style="color: #4CAF50;">Edit the animated text</a> and send your beautiful words out into the universe, or write a letter to your friend.</p>
             <p style="font-size: 12px; line-height: 1.8;">The continued existence of the universe is all down to your skill. </p>
             <p style="font-size: 12px; line-height: 1.8; margin-bottom: 20px;">Good luck!</p>
-            <button id="close-modal" style="padding: 5px 15px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; margin-top: 20px; font-family: 'Press Start 2P', cursive; font-size: 12px; position: relative; z-index: 1001;">Close</button>
+            <button id="close-modal" style="padding: 5px 15px; background: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; margin-top: 20px; font-family: 'Press Start 2P', monospace; font-size: 12px; position: relative; z-index: 1001;">Close</button>
         </div>
     </div>
 
@@ -1135,7 +1135,7 @@
             bonusText.style.transform = 'translate(-50%, -50%)';
             bonusText.style.color = '#FFFF00';
             bonusText.style.fontSize = '20px';
-            bonusText.style.fontFamily = "'Press Start 2P', cursive";
+            bonusText.style.fontFamily = "'Press Start 2P', monospace";
             bonusText.style.textShadow = '0 0 10px #FFFF00';
             bonusText.style.zIndex = '1000';
             bonusText.style.pointerEvents = 'none';
